--- a/file.css
+++ b/file.css
@@ -4,7 +4,7 @@
     height: 100px;
 }
 .first-main {
-    border: 1px solid red;
+    border: 1px solid blueviolet;
     height: 30px;
     margin-top: 3px;
     width: 50vw;
